--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   "author": "Steinar Þór Oddsson",
   "license": "ISC",
   "dependencies": {
+    "apollo-datasource-rest": "^0.8.1",
     "apollo-server": "^2.12.0",
-    "axios": "^0.19.2",
     "graphql": "^15.0.0",
     "graphql-import": "^1.0.2"
   },
