--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "apollo-datasource-rest": "^0.8.1",
     "apollo-server": "^2.12.0",
+    "cloudinary": "^1.21.0",
     "graphql": "^15.0.0",
     "graphql-import": "^1.0.2"
   },
